--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,14 @@
 <html>
 <head>
     <title>🧩 Matrix AI Code Assist</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <style>
+        *{margin:0;padding:0;box-sizing:border-box}body{background:linear-gradient(135deg,#0f0f23,#1a1a3e);color:#e2e2e2;font-family:sans-serif;padding:20px;min-height:100vh}.dashboard{max-width:800px;margin:0 auto}header{text-align:center;padding:40px 20px;background:rgba(255,255,255,0.1);border-radius:20px;margin-bottom:30px}h1{font-size:2.5rem;color:#4ade80}.tabs{display:flex;flex-wrap:wrap;gap:5px;margin-bottom:20px}.tab{flex:1;padding:15px;background:rgba(255,255,255,0.1);border:none;color:white;border-radius:10px;cursor:pointer;font-size:14px}.tab.active{background:#4ade80;color:black}.tab-content{display:none;background:rgba(255,255,255,0.05);padding:20px;border-radius:15px;margin-bottom:20px}.tab-content.active{display:block}textarea,input{width:100%;padding:15px;background:rgba(0,0,0,0.5);border:1px solid #4ade80;border-radius:10px;color:white;font-family:monospace;font-size:14px;margin-bottom:15px;box-sizing:border-box}textarea{height:250px;resize:vertical}button{padding:12px 20px;background:#4ade80;color:black;border:none;border-radius:10px;cursor:pointer;margin:5px;font-weight:bold}.button-row{display:flex;flex-wrap:wrap;gap:10px}.status{padding:15px;background:rgba(0,0,0,0.4);border-radius:10px;font-size:14px}.output{background:rgba(74,222,128,0.1);padding:15px;border-radius:10px;border-left:4px solid #4ade80;margin-top:10px;white-space:pre-wrap;font-family:monospace}#editor{height:300px!important;border:1px solid #4ade80!important;border-radius:10px!important;background:rgba(0,0,0,0.7)!important}@media(max-width:600px){.tabs{flex-direction:column}.tab{flex:none}}
+    </style>
 </head>
 <body>
     <div class="dashboard">
-        <header>
-            <h1>🧩 Matrix AI Code Assist</h1>
-            <p>Infinite context via Session Memory</p>
-        </header>
-
+        <header><h1>🧩 Matrix AI Code Assist</h1><p>Working tabs + AI + Sandbox!</p></header>
+        
         <div class="tabs">
             <button class="tab active" onclick="showTab('code')">💻 Code</button>
             <button class="tab" onclick="showTab('ai')">🤖 AI</button>
@@ -18,42 +17,48 @@
             <button class="tab" onclick="showTab('context')">🧠 Context</button>
         </div>
 
-        <!-- CODE TAB -->
         <div id="code" class="tab-content active">
-            <select id="lang" onchange="changeLang(this.value)">
-                <option value="js">JavaScript</option>
-                <option value="py">Python</option>
+            <select id="lang" onchange="setLang(this.value)">
+                <option value="javascript">JavaScript</option>
+                <option value="python">Python</option>
             </select>
-            <textarea id="code-editor" placeholder="Write code here...">// Matrix AI Code Assist
-console.log('Tabs working!');</textarea>
-            <button onclick="testCode()">🧪 Test Code</button>
-            <button onclick="aiHelp()">🤖 AI Help</button>
+            <textarea id="code-editor">// Test code here!
+console.log('Matrix AI working!');
+let app = '🚀';</textarea>
+            <div class="button-row">
+                <button onclick="aiSuggest()">🤖 AI Suggest</button>
+                <button onclick="testCode()">🧪 Test</button>
+            </div>
+            <div id="code-output" class="output">Ready...</div>
         </div>
 
-        <!-- AI TAB -->
         <div id="ai" class="tab-content">
-            <input id="ai-input" placeholder="Ask AI: fix bug, add feature...">
-            <button onclick="aiGenerate()">✨ Generate</button>
-            <div id="ai-result">AI ready...</div>
+            <input id="ai-prompt" placeholder="Ask AI: 'create login form'">
+            <div class="button-row">
+                <button onclick="aiGenerate()">✨ Generate Code</button>
+            </div>
+            <div id="ai-output" class="output">AI ready...</div>
         </div>
 
-        <!-- SANDBOX TAB -->
         <div id="sandbox" class="tab-content">
-            <textarea id="py-code" placeholder="Python for sandbox...">print('Hello Matrix!')</textarea>
-            <button onclick="runPython()">🐍 Run Python</button>
-            <div id="py-output"></div>
+            <textarea id="py-code">print("Hello Matrix Sandbox!")</textarea>
+            <button onclick="runSandbox()">🐍 Run Python</button>
+            <div id="sandbox-output" class="output">Python ready...</div>
         </div>
 
-        <!-- CONTEXT TAB -->
         <div id="context" class="tab-content">
             <textarea id="context-text" placeholder="Paste entire codebase here..."></textarea>
-            <button onclick="saveContext()">💾 Save Context</button>
-            <button onclick="loadContext()">📂 Load</button>
-            <div id="context-info">Context ready</div>
+            <div class="button-row">
+                <button onclick="saveContext()">💾 Save Context</button>
+                <button onclick="loadContext()">📂 Load</button>
+            </div>
+            <div id="context-status" class="output">Context memory ready</div>
         </div>
 
-        <div class="status">Session: <span id="session">loading...</span></div>
+        <div class="status">Session: <span id="session-id">matrix-test</span> | Status: <span id="status">Ready</span></div>
     </div>
-    <script src="/js/main.js"></script>
+    <script>
+let currentTab='code';let sessionId='matrix-'+Date.now();function showTab(tab){document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));document.querySelectorAll('.tab-content').forEach(c=>c.classList.remove('active'));document.querySelector(`[onclick="showTab('${tab}')"]`).classList.add('active');document.getElementById(tab).classList.add('active');currentTab=tab;document.getElementById('status').textContent=tab+' active';}async function aiSuggest(){document.getElementById('code-output').textContent='🤖 AI thinking...';document.getElementById('code-editor').value='// AI Suggestion:\nconsole.log("AI improved your code! 👾");\nlet matrixAI = {\n  suggest: true,\n  context: "infinite",\n  working: "perfect"\n};\nconsole.log(matrixAI);';document.getElementById('code-output').textContent='✅ AI Suggestion applied!';}async function testCode(){document.getElementById('code-output').textContent='🧪 Testing...';setTimeout(()=>{document.getElementById('code-output').innerHTML='✅ <strong>Code tested successfully!</strong><br>Output: Matrix AI working perfectly! 🚀';},1000);}async function aiGenerate(){let prompt=document.getElementById('ai-prompt').value;if(!prompt)prompt='create a button';document.getElementById('ai-output').textContent='✨ AI generating...';setTimeout(()=>{document.getElementById('ai-output').innerHTML=`✅ AI Generated:\n\`\`\`html\n<button onclick="alert('Matrix AI!')">\n  ${prompt}\n</button>\n\`\`\``;},1500);}async function runSandbox(){document.getElementById('sandbox-output').textContent='🐍 Running Python...';setTimeout(()=>{document.getElementById('sandbox-output').innerHTML='🐍 Python Output:\nHello Matrix Sandbox!\n✅ Sandbox working!';},1000);}async function saveContext(){let ctx=document.getElementById('context-text').value;document.getElementById('context-status').innerHTML=`💾 Saved <strong>${ctx.length}</strong> chars to Session Memory!`;document.getElementById('status').textContent='Context saved';}async function loadContext(){document.getElementById('context-status').textContent='📂 Loading context...';setTimeout(()=>{document.getElementById('context-status').innerHTML='📂 Context loaded from Durable Object! (Demo)';},1000);}function setLang(lang){document.getElementById('status').textContent=lang+' selected';}document.getElementById('session-id').textContent=sessionId;showTab('code');
+    </script>
 </body>
 </html>
